# carokia-brain

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  carokia.toml  docker-compose.yml  skills-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/carokia-brain/: Cargo.toml  README.md
crates/carokia-brain/examples/: agent_demo.rs  chat_cli.rs  conversationalist_demo.rs  demo_loop.rs  guardian_demo.rs  memory_demo.rs  sim_nav.rs  vision_demo.rs  voice_chat.rs
crates/carokia-brain/src/: alerts.rs  lib.rs
crates/carokia-core/: Cargo.toml  README.md
crates/carokia-core/src/: bus.rs  emotion.rs  error.rs  lib.rs  traits.rs  types.rs
crates/carokia-decision/: Cargo.toml  README.md
crates/carokia-decision/src/: emergency.rs  events.rs  lib.rs  patrol.rs  threat.rs
crates/carokia-language/: Cargo.toml  README.md
crates/carokia-language/src/: claude.rs  config.rs  lib.rs  ollama.rs  tools.rs  tts.rs
crates/carokia-memory/: Cargo.toml  README.md
crates/carokia-memory/src/: embeddings.rs  lib.rs  reflection.rs  sqlite.rs
crates/carokia-perception/: Cargo.toml  README.md
crates/carokia-perception/src/: camera.rs  face.rs  lib.rs  microphone.rs  vision.rs  whisper.rs
crates/carokia-planner/: Cargo.toml  README.md
crates/carokia-planner/src/: lib.rs  llm_planner.rs  reasoning.rs
crates/carokia-sim/: Cargo.toml  README.md
crates/carokia-sim/src/: lib.rs  physics.rs  renderer.rs  robot.rs  world.rs
docs/: architecture.md  quickstart.md
docs/demos/: 01-chat.md  02-voice.md  03-vision.md  04-guardian.md  05-memory.md  06-simulation.md
docs/launch/: hackernews.md  reddit-robotics.md  reddit-rust.md  twitter.md
