[workspace]
resolver = "2"
members = [
    "crates/carokia-core",
    "crates/carokia-memory",
    "crates/carokia-perception",
    "crates/carokia-language",
    "crates/carokia-planner",
    "crates/carokia-decision",
    "crates/carokia-sim",
    "crates/carokia-brain",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
tokio-util = "0.7"
ollama-rs = { version = "0.2", features = ["stream"] }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
whisper-rs = "0.13"
cpal = "0.15"
rodio = { version = "0.19", features = ["wav"] }
hound = "3.5"
image = "0.25"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
