[package]
name = "carokia-brain"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = []
voice = ["carokia-perception/audio", "carokia-perception/whisper", "ctrlc"]

[dependencies]
carokia-core = { path = "../carokia-core" }
carokia-memory = { path = "../carokia-memory" }
carokia-perception = { path = "../carokia-perception" }
carokia-language = { path = "../carokia-language" }
carokia-planner = { path = "../carokia-planner" }
carokia-decision = { path = "../carokia-decision" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
ctrlc = { version = "3.4", optional = true }
