[package]
name = "carokia-brain"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Top-level orchestrator and cognitive loop for the Carokia robot brain"
repository = "https://github.com/carokia-robotics/carokia-brain"
keywords = ["robotics", "ai", "autonomous", "robot"]
categories = ["science::robotics"]

[features]
default = []
voice = ["carokia-perception/audio", "carokia-perception/whisper", "ctrlc"]
vision = ["carokia-perception/vision"]
sqlite = ["carokia-memory/sqlite"]
embeddings = ["carokia-memory/embeddings"]
llm-planner = ["carokia-planner/llm"]
reasoning = ["carokia-planner/reasoning"]
reflection = ["carokia-memory/reflection"]
simulation = ["carokia-sim"]
cli = ["clap"]
streaming = ["carokia-language/streaming"]

[dependencies]
carokia-core = { path = "../carokia-core" }
carokia-memory = { path = "../carokia-memory" }
carokia-perception = { path = "../carokia-perception" }
carokia-language = { path = "../carokia-language" }
carokia-planner = { path = "../carokia-planner" }
carokia-decision = { path = "../carokia-decision" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
ctrlc = { version = "3.4", optional = true }
carokia-sim = { path = "../carokia-sim", optional = true }
clap = { workspace = true, optional = true }
