[package]
name = "carokia-decision"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
carokia-core = { path = "../carokia-core" }
carokia-memory = { path = "../carokia-memory" }
carokia-perception = { path = "../carokia-perception" }
carokia-planner = { path = "../carokia-planner" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
