[package]
name = "carokia-decision"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Behavior engine, threat detection, and decision-making for Carokia"
repository = "https://github.com/carokia-robotics/carokia-brain"
keywords = ["robotics", "ai", "autonomous", "robot"]
categories = ["science::robotics"]

[dependencies]
carokia-core = { path = "../carokia-core" }
carokia-memory = { path = "../carokia-memory" }
carokia-perception = { path = "../carokia-perception" }
carokia-planner = { path = "../carokia-planner" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
