[package]
name = "carokia-language"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = ["ollama"]
ollama = ["ollama-rs"]
claude = ["reqwest"]

[dependencies]
carokia-core = { path = "../carokia-core" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
ollama-rs = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
toml = { workspace = true }
