[package]
name = "carokia-language"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "LLM backends (Ollama, Claude), conversation management, and TTS for Carokia"
repository = "https://github.com/carokia-robotics/carokia-brain"
keywords = ["robotics", "ai", "autonomous", "robot"]
categories = ["science::robotics"]

[features]
default = ["ollama", "streaming"]
ollama = ["ollama-rs"]
claude = ["reqwest"]
streaming = ["tokio-stream"]

[dependencies]
carokia-core = { path = "../carokia-core" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
ollama-rs = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
toml = { workspace = true }
tokio-stream = { workspace = true, optional = true }
chrono = { workspace = true }
