[package]
name = "carokia-memory"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = []
sqlite = ["rusqlite"]
embeddings = ["reqwest"]
reflection = ["carokia-language"]

[dependencies]
carokia-core = { path = "../carokia-core" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
carokia-language = { path = "../carokia-language", optional = true, default-features = false }
