[package]
name = "carokia-perception"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
carokia-core = { path = "../carokia-core" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
