[package]
name = "carokia-perception"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = []
audio = ["cpal", "hound"]
whisper = ["whisper-rs"]

[dependencies]
carokia-core = { path = "../carokia-core" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
cpal = { workspace = true, optional = true }
hound = { workspace = true, optional = true }
whisper-rs = { workspace = true, optional = true }
