[package]
name = "carokia-perception"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Sensor processing pipeline (vision, audio, lidar, Whisper) for Carokia"
repository = "https://github.com/carokia-robotics/carokia-brain"
keywords = ["robotics", "ai", "autonomous", "robot"]
categories = ["science::robotics"]

[features]
default = []
audio = ["cpal", "hound"]
whisper = ["whisper-rs"]
vision = ["reqwest", "base64", "image"]

[dependencies]
carokia-core = { path = "../carokia-core" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
cpal = { workspace = true, optional = true }
hound = { workspace = true, optional = true }
whisper-rs = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
image = { workspace = true, optional = true }
