[package]
name = "carokia-planner"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Goal decomposition and task planning (rule-based and LLM) for Carokia"
repository = "https://github.com/carokia-robotics/carokia-brain"
keywords = ["robotics", "ai", "autonomous", "robot"]
categories = ["science::robotics"]

[features]
default = []
llm = ["carokia-language"]
reasoning = ["carokia-language"]

[dependencies]
carokia-core = { path = "../carokia-core" }
carokia-language = { path = "../carokia-language", optional = true, default-features = false }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
